@@ -63,7 +63,7 @@
 1	0	160	213	main_entrance	1	0
 2	0	152	224	16	16	to_outside	0	1	3	out_shop
 8	0	160	69	salesman	3	1	npc/static_villager6	lyriann_shop.salesman
-16	0	80	104	apples	apples	1	-1	25	lyriann_shop.apples
+16	0	80	104	apples	apple	1	-1	25	lyriann_shop.apples
 16	0	144	104	bomb_bag	bomb_bag	1	31	160	lyriann_shop.bomb_bag
 16	0	208	104	heart	heart	1	-1	10	lyriann_shop.heart
 0	2	112	216	96	8	148
